--- a/ProjetoITP.cbp
+++ b/ProjetoITP.cbp
@@ -6,6 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
+			<Script file="lib_finder.script" />
 			<Target title="Debug">
 				<Option output="bin/Debug/ProjetoITP" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
@@ -14,6 +15,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="libglade-2.0" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/ProjetoITP" prefix_auto="1" extension_auto="1" />
@@ -29,8 +33,8 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-mms-bitfields" />
 			<Add option="-Wall" />
+			<Add option="-mms-bitfields" />
 			<Add directory="C:/gtk/include" />
 			<Add directory="C:/gtk/include/gtk-2.0" />
 			<Add directory="C:/gtk/include/cairo" />
@@ -41,12 +45,14 @@
 			<Add directory="C:/gtk/lib/gtk-2.0/include" />
 			<Add directory="C:/gtk/include/atk-1.0" />
 			<Add directory="C:/gtk/include/gdk-pixbuf-2.0" />
+			<Add directory="C:/gtk/include/libglade-2.0/glade" />
 		</Compiler>
 		<Linker>
 			<Add library="gtk-win32-2.0" />
 			<Add library="gobject-2.0" />
 			<Add library="glib-2.0" />
 			<Add directory="C:/gtk/lib" />
+			<Add directory="C:/gtk/lib/libglade/2.0" />
 		</Linker>
 		<Unit filename="dominio.h">
 			<Option target="&lt;{~None~}&gt;" />
